--- a/style.css
+++ b/style.css
@@ -18,6 +18,21 @@ body {
   background-color: #555;
 }
 
+.collapsible:after {
+    display: flex;
+    justify-content: flex-end;
+ 
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: white;
+    
+    margin-left: 5px;
+  }
+  
+  .active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+  }
+
 .content {
   padding: 0 18px;
   display: none;
