--- a/style.css
+++ b/style.css
@@ -1,42 +1,62 @@
 body {
     background-color: #333;
     color: white;
+    ;
+}
+h2 {    
+    text-align: center;
+    font-size: 3rem;
+    font-family: 'Amatic SC', cursive;
+}
+button {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Shadows Into Light', cursive;
 }
 .collapsible {
-  background-color: #777;
+    
+  background-color: rgb(241, 183, 241);
   color: white;
   cursor: pointer;
-  padding: 18px;
+  padding: 1.8rem;
   width: 100%;
   border: none;
   text-align: left;
   outline: none;
-  font-size: 15px;
+  font-size: 2rem;
 }
 
 .active, .collapsible:hover {
-  background-color: #555;
+  background-color: rgb(158, 107, 158);
 }
 
 .collapsible:after {
     display: flex;
     justify-content: flex-end;
  
-    content: '\02795'; /* Unicode character for "plus" sign (+) */
-    font-size: 13px;
+    content: '+'; 
+    font-size: 1.3rem;
     color: white;
-    
+    font-family: 'Didact Gothic', sans-serif;
     margin-left: 5px;
   }
   
   .active:after {
-    content: "\2796"; /* Unicode character for "minus" sign (-) */
+    content: "-"; 
+    font-family: 'Didact Gothic', sans-serif;
   }
 
 .content {
-  padding: 0 18px;
+  padding: 0 1.8rem;
   display: none;
   overflow: hidden;
-  background-color: #999;
+  background-color: rgb(235, 230, 230);
   color:black;
+  font-size: 1.5rem;
+  font-family: 'Didact Gothic', sans-serif;
+
 }
+
+
+
