--- a/style.css
+++ b/style.css
@@ -1,30 +1,45 @@
 body {
     background-color: #333;
     color: white;
-    ;
+    
+ 
 }
 h2 {    
     text-align: center;
     font-size: 3rem;
     font-family: 'Amatic SC', cursive;
 }
+
+.main {
+
+ 
+
+  
+
+}
 button {
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-family: 'Shadows Into Light', cursive;
+    border-radius: 10px;
+    
+   
 }
 .collapsible {
-    
+  width: 100%;
   background-color: rgb(241, 183, 241);
   color: white;
   cursor: pointer;
   padding: 1.8rem;
-  width: 100%;
+  box-shadow: 0px 0px 25px whitesmoke;
   border: none;
   text-align: left;
   outline: none;
   font-size: 2rem;
+ border-radius: 10px;
+
+
 }
 
 .active, .collapsible:hover {
@@ -55,6 +70,8 @@ button {
   color:black;
   font-size: 1.5rem;
   font-family: 'Didact Gothic', sans-serif;
+  border-radius: 10px;
+  box-shadow: 0px 0px 25px whitesmoke;
 
 }
 
